Fix distorted image

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -165,6 +165,7 @@
   overflow: hidden;
   display: flex;
   justify-content: center;
+  align-items: center;
 
   img {
     width: auto;
